# pairs_mins_estimator_plugin

./: CMakeLists.txt  README.md  estimator_plugins.xml  package.xml
custom_configs/: pairs_uav_managers.yaml
src/: mins_plugin.cpp
