<?xml version="1.0"?>
<package format="2">

  <name>pairs_mins_estimator_plugin</name>
  <version>1.0.0</version>
  <description>PAIRS mins state estimator plugin</description>

  <maintainer email="canhthanh@vnu.edu.vn">Thanh Nguyen Canh</maintainer>
  <author email="canhthanh@vnu.edu.vn">Thanh Nguyen Canh</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <depend>pairs_uav_managers</depend>
  <depend>pairs_uav_state_estimators</depend>

  <export>
    <pairs_uav_managers plugin="${prefix}/estimator_plugins.xml" />
  </export>

</package>
